--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.18.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>22.0.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
