Submission for Architect Assignment 1 for Nicholas Hilaire

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 
         <compile.java.version>21</compile.java.version>
         <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Define a property for JavaFX version -->
+        <javafx.version>17.0.2</javafx.version>
 
         <!-- Dependency Versions -->
         <jupiter.version>5.11.4</jupiter.version>
@@ -34,6 +39,20 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        <!-- JavaFX FXML -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        <!-- JUnit Jupiter (for testing) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
