--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -68,7 +68,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>edu.sdccd.cisc191.template.Client</mainClass>
+                                    <mainClass>edu.sdccd.cisc191.common.Client</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
