--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -16,6 +16,7 @@
             <artifactId>Common</artifactId>
             <version>${project.version}</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -57,7 +58,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>edu.sdccd.cisc191.server.Server</mainClass>
+                                    <mainClass>edu.sdccd.cisc191.common.Server</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
